@startuml Class_Diagram

class User {
    - _id : ObjectId
    - name : String
    - email : String
    - password : String
    - role : String
    - googleId : String
    - avatar : String
    + comparePassword(candidatePassword: String) : Boolean
}

class MealAttendance {
    - _id : ObjectId
    - user : ObjectId
    - date : Date
    - breakfast : Boolean
    - lunch : Boolean
    - dinner : Boolean
    - totalMeals : Number
    + computeTotalMeals()
}

class OptOut {
    - _id : ObjectId
    - user : ObjectId
    - startDate : Date
    - endDate : Date
    - reason : String
    - approved : Boolean
    - adminNotes : String
}

class Rebate {
    - _id : ObjectId
    - user : ObjectId
    - monthYear : String
    - baseFee : Number
    - totalDays : Number
    - attendedDays : Number
    - optOutDays : Number
    - missedDays : Number
    - calculatedAmount : Number
    - status : String
}

class Review {
    - _id : ObjectId
    - user : ObjectId
    - mealDate : Date
    - rating : Number
    - comment : String
    - approved : Boolean
}

class ML_Summarizer {
    + summarizeReviews(reviews: List<Review>) : Summary
    + analyzeSentiment(comment: String) : SentimentScore
}

class AuthController {
    + login()
    + googleLogin()
    + register()
    + forgotPassword()
    + resetPassword()
    + refresh()
}

class AdminController {
    + getStats()
    + getOptOuts()
    + getRebates()
    + getReviews()
    + getReviewSummary()
    + getAttendance()
}

class StudentController {
    + logAttendance()
    + requestOptOut()
    + submitReview()
    + viewHistory()
}

User "1" *-- "*" MealAttendance
User "1" *-- "*" OptOut
User "1" *-- "*" Rebate
User "1" *-- "*" Review

AuthController --> User : authenticates
AdminController --> OptOut : manages
AdminController --> Rebate : calculates/approves
AdminController --> Review : views/summarizes
AdminController --> MealAttendance : views
AdminController --> ML_Summarizer : calls

StudentController --> MealAttendance : logs
StudentController --> OptOut : requests
StudentController --> Review : submits

@enduml
